k8s-local.yml
# -----------------------------
# Deployment
# -----------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
        - name: fastapi
          image: emehxd/fastapi-template:main
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 100m
            limits:
              cpu: 500m

---
# -----------------------------
# Service Load balancer
# -----------------------------
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
spec:
  type: LoadBalancer
  selector:
    app: fastapi
  ports:
    - protocol: TCP
      port: 80        # puerto del Service dentro del cluster
      targetPort: 8000 # puerto del contenedor
      nodePort: 30080
